--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ a img{
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0 0 20px;
+  margin: 0 0 10px;
 }
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
@@ -38,6 +38,8 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 #footer {
   background-color: #444;
@@ -56,7 +58,7 @@ nav {
   text-align:center;
 }
 nav h1 {
-  margin: auto;
+  padding: 20px 0;
 }
 nav h1 a {
   color: #fff;
@@ -99,14 +101,14 @@ nav h1 a {
 }
 /* ====================== Map ====================== */
 #map {
-  height: 400px;
+  height: 250px;
   width: 100%;
   background-color: #ccc;
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  height: 100%;
   background-color: #3397DB;
   align-items: center;
 }
@@ -115,18 +117,19 @@ nav h1 a {
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  padding: 10px ;
+  margin: 0;
 }
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
   font-family: Arial,sans-serif;
-  font-size: 11pt;
+  font-size: 9.5pt;
   height: 35px;
   letter-spacing: 0;
   margin: 10px;
   padding: 0 10px;
-  width: 200px;
+  width: 150px;
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -142,9 +145,8 @@ nav h1 a {
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
   margin: 15px;
-  min-height: 380px;
   padding: 30px;
-  text-align: left;
+  text-align: center;
   /* width: 270px; */
 }
 #restaurants-list .restaurant-img {
@@ -259,7 +261,7 @@ nav h1 a {
 }
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
@@ -273,4 +275,43 @@ nav h1 a {
 }
 #restaurant-hours td {
   color: #666;
+}
+
+
+/* ====================== Responsive Styles ====================== */
+@media screen and (min-width: 750px) {
+  .restaurant-container {
+    display: flex;
+  }
+  .left-wrapper {
+    margin: 10px;
+    align-content: center;
+  }
+  .right-wrapper {
+    margin: auto;
+  }
+  #restaurants-list .restaurant-img {
+    max-width: 400px;
+  }
+}
+@media screen and (min-width: 950px) {
+  #restaurants-list li h1 {
+    font-size: 30px;
+    margin: 20px 0;
+  }
+  #restaurants-list .restaurant-img {
+    max-width: 550px;
+  }
+  #map {
+    height: 300px;
+  }
+
+  #restaurants-list p {
+    font-size: 20px;
+    margin: 10px;
+  }
+  #restaurants-list li a {
+    font-size: 20px;
+    margin: 30px 0 0;
+  }
 }
